Add surefire dependency version