@@ -19,9 +19,10 @@
         <mockito.version>3.3.3</mockito.version>
         <version.apache.commons.lang>3.8.1</version.apache.commons.lang>
         <modelMapper.version>2.3.0</modelMapper.version>
-        <junit.version>4.12</junit.version>
+        <junit.version>4.13.1</junit.version>
         <keycloak.version>11.0.3</keycloak.version>
         <javax.validation.version>2.0.0.Final</javax.validation.version>
+        <surefire.plugin.version>2.21.0</surefire.plugin.version>
     </properties>
 
     <dependencies>
@@ -126,6 +127,25 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire.plugin.version}</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
